Renamed services to be lower case

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -49,7 +49,8 @@
     	
     	<!--  Factories -->
     	<script src="./factories/userService.js"></script>
-    	<script src="./factories/ReportingPeriodService.js"></script>
+    	<script src="./factories/reportingPeriodService.js"></script>
+    	<script src="./factories/networkHierarchyService.js"></script>
 
     	<!--  Controllers -->
     	<script src="./controllers/dashboardController.js"></script>
@@ -84,6 +85,7 @@
 	
 	
 	<P>{{user.userFirstName}} {{user.userLastName}}
+	<P>{{user.healthNetworkName}} 
 	
 	<div class="row-fluid">
 		<div class="col-md-12">
