First pass of breadcrumb integration.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -113,10 +113,17 @@
 	</div>
 	<div class="row-fluid">
 		<div class="container-fluid bg-blue">
-			<span style="padding-left: 5px; color: white;"><a><font color="#FFFFFF">{{network.selectedHierarchyNode.label}}</font></a></span>
+			<span style="padding-left: 5px; color: white;">
+				<span ng-repeat="item in network.selectedPath">
+					<a ng-if="!$last" href="javascript:void(0)" ng-click="resetSelectedEntity(item.hierarchyId)" style="text-decoration: underline;">
+						<font color="#FFFFFF">{{item.label}}
+						</font>
+					</a>
+					<span ng-if="!$last"> &nbsp;/&nbsp;</span>
+					<span ng-if="$last"><font color="#FFFFFF">{{item.label}}</font></span>
+				</span>
+			</span>
 			<div class="container-fluid bg-lightgray">
-
-
 				<div class="row-fluid">
 					<div class="col-md-12">
 					</div>
