--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -57,6 +57,7 @@
 <script src="./factories/reportingPeriodService.js"></script>
 <script src="./factories/networkHierarchyService.js"></script>
 <script src="./factories/programService.js"></script>
+<script src="./factories/reportInfoService.js"></script>
 
 <!--  Controllers -->
 <script src="./controllers/dashboardController.js"></script>
