Drill through integrated, cache service created.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -58,18 +58,17 @@
 <script src="./factories/networkHierarchyService.js"></script>
 <script src="./factories/programService.js"></script>
 <script src="./factories/reportInfoService.js"></script>
+<script src="./factories/cacheService.js"></script>
 
 <!--  Controllers -->
 <script src="./controllers/dashboardController.js"></script>
 <script src="./controllers/loginController.js"></script>
-<script src="./controllers/view1Controller.js"></script>
-<script src="./controllers/view2Controller.js"></script>
 <script src="./controllers/defaultController.js"></script>
 <script src="./controllers/snippetsController.js"></script>
 <script src="./controllers/measureComparativeViewController.js"></script>
 <script src="./controllers/domainComparativeViewController.js"></script>
 <script src="./controllers/networkHierarchyController.js"></script>
-
+<script src="./controllers/cacheController.js"></script>
 
 <!--  Style Sheets -->
 <!-- Bootstrap core CSS -->
