--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -126,12 +126,13 @@
 					<div class="col-md-12"></div>
 				</div>
 				<div ui-view>
-					<div style="height: 600px; background-image: url(./images/splash.jpg); background-size: cover;" />
+					<div style="height: 600px; background-image: url(./images/splash.jpg); background-size: cover;" ></div>
 					<div class="row-fluid">
 						<div class="col-md-12"></div>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 </body>
 </html>
