Added Domain Summary View. Minor formatting changes to all other views.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -69,6 +69,7 @@
 <script src="./controllers/measureComparativeViewController.js"></script>
 <script src="./controllers/domainComparativeViewController.js"></script>
 <script src="./controllers/measureDetailViewController.js"></script>
+<script src="./controllers/domainSummaryViewController.js"></script>
 <script src="./controllers/networkHierarchyController.js"></script>
 <script src="./controllers/cacheController.js"></script>
 
