New Measure Summary Page integrated

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -67,6 +67,7 @@
 <script src="./controllers/defaultController.js"></script>
 <script src="./controllers/snippetsController.js"></script>
 <script src="./controllers/measureComparativeViewController.js"></script>
+<script src="./controllers/measureSummaryViewController.js"></script>
 <script src="./controllers/domainComparativeViewController.js"></script>
 <script src="./controllers/measureDetailViewController.js"></script>
 <script src="./controllers/domainSummaryViewController.js"></script>
