Various changes: - New default landing page - Change to screen banner - Changed loading icon

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -102,13 +102,20 @@
 		<div class="container-fluid no-margin bg-gray-gradient blueshadow">
 			<div class="col-md-4 no-padding">
 				<div style="padding-left: 5px;">
-					<img src="./images/premier_connect_logo.png" />
+					<span>
+						<img src="./images/premier_connect_logo.png" />
+						<font size="4" face="Arial" color="#999999">
+							&nbsp&nbspProvider Performance
+						</font>
+					</span>
 				</div>
 			</div>
 			<div class="col-md-4">
+				<!-- 
 				<h4>
 					Physician Dashboard:&nbsp;<small>{{user.healthNetworkName}}</small>
 				</h4>
+				 -->
 			</div>
 			<div class="col-md-4">
 				<h5 align="right">{{user.userFirstName}} {{user.userLastName}}</h5>
