--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -111,6 +111,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
+				&nbsp
 				<!-- 
 				<h4>
 					Physician Dashboard:&nbsp;<small>{{user.healthNetworkName}}</small>
