--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -137,7 +137,7 @@
 					<div class="col-md-12"></div>
 				</div>
 				<div ui-view>
-					<div resizebottomdiv="15" id="backgroundDiv" style="height: 300px; background-image: url(./images/splash.jpg); background-size: cover;">
+					<div style="height: 700px; background-image: url(./images/splash.jpg); background-size: cover;">
 					<div class="row-fluid" style="height:300px;"></div>
 					<div class="row-fluid" >
 						<div class="col-md-4"></div>
